# qqmusic-web

./: .gitignore  API doc.md  Project structure.md  README.md  Update log.md  app.py  gunicorn.conf.py  pyproject.toml  qqmusic_cred.pkl  requirements.txt  wiki.md  wsgi.py
app/: README.md  config.py
app/models/: README.md  download_result.py  song_info.py
app/routes/: README.md  admin_routes.py  api_routes.py
app/services/: README.md  cover_manager.py  credential_manager.py  file_manager.py  metadata_manager.py  music_downloader.py
app/static/: README.md  manifest.json  sw.js
app/static/css/: admin.css  style.css
app/static/js/: admin.js  script.js
app/templates/: README.md  admin.html  index.html
app/utils/: README.md  http_session.py  thread_utils.py
credential/: qqmusic_cred.pkl
docker/: docker-compose.yml  dockerfile  giteeinstall.sh  install-cf.sh  install.sh  新建 文本文档.txt
static/css/: style.css
static/js/: script.js
templates/: index.html
