[project]
name = "qqmusic-web"
version = "v2.1.7"
description = "download music from web pages"
authors = [
    { name = "tooplick", email = "id6543156918@gmail.com" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache==0.12.3",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "cryptography==45.0.5",
    "Flask==3.1.2",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "multidict==6.7.0",
    "mutagen==1.47.0",
    "orjson==3.11.4",
    "propcache==0.4.1",
    "pycparser==2.23",
    "qqmusic-api-python==0.3.6",
    "sniffio==1.3.1",
    "typing-extensions==4.15.0",
    "Werkzeug==3.1.3",
    "yarl==1.22.0"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
